--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -8,7 +8,7 @@ body>main{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
 }
 
@@ -16,7 +16,7 @@ main>section{
     width: 60%;
     height: 30px;
     display: flex;
-    border: black solid 1px;
+    border: #312b2b solid 1px;
 }
 main>section>div{
     flex-grow: 1;
@@ -30,6 +30,5 @@ main>aside{
 }
 main>aside>button{
     cursor: pointer;
-    border-radius: 12px;
     font-weight: bold;
 }
